examples/errors/parsing/expr-tuple-trailing-comma.cn
main : () [impure] =
  let p = (1, );
  ()
